# stage-previz

./: .gitignore  README.md  _headers  index.html  package-lock.json  package.json  stage.glb  vercel.json
.claude/: launch.json
.github/workflows/: ndi-helper-release.yml
cf-worker/: README.md  package-lock.json  package.json  worker.js  wrangler.toml
cf-worker/migrations/: 0001_init.sql  0002_stage_objects.sql  0003_object_locked.sql  0004_materials.sql  0005_activity_log.sql  0006_shows.sql  0007_auth.sql  0008_shared_assets.sql  0009_cue_templates.sql  0010_project_tags.sql  0011_drive_oauth.sql  0012_share_links.sql  0013_cue_video_time.sql
ndi-helper/: Cargo.toml  README.md  build.ps1
ndi-helper/src/: autostart.rs  config.rs  main.rs  ndi.rs  tray.rs  ws_server.rs
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/src/: App.tsx  main.tsx
web/src/components/: ActivityDrawer.css  ActivityDrawer.tsx  AdminLayout.css  AdminLayout.tsx  AssetPickerDialog.css  AssetPickerDialog.tsx  CommandPalette.css  CommandPalette.tsx  CommentSearchDialog.css  CommentSearchDialog.tsx  CueDiffDialog.css  CueDiffDialog.tsx  CueStoryboard.css  CueStoryboard.tsx  DriveSettingsDialog.css  DriveSettingsDialog.tsx  ErrorBoundary.css  ErrorBoundary.tsx  HelpModal.css  HelpModal.tsx  ImportCuesDialog.css  ImportCuesDialog.tsx  ModelVersionsDialog.css  ModelVersionsDialog.tsx  NewProjectDialog.css  NewProjectDialog.tsx  NewShowDialog.tsx  ProjectCard.css  ProjectCard.tsx  RecentProjectsBar.css  RecentProjectsBar.tsx  SaveIndicator.css  SaveIndicator.tsx  ShareLinksDialog.css  Skeleton.css  (+10 more)
(+36 files in other folders)
